<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_home"
            android:title="@string/home"
            />
        <item
            android:id="@+id/drawer_to_watch"
            android:title="@string/to_watch"
            />
        <item
            android:id="@+id/drawer_favorite"
            android:title="@string/fav"
            />
        <item
            android:id="@+id/drawer_watched"
            android:title="@string/watched"
            />
        <item
            android:id="@+id/drawer_explore"
            android:title="@string/explore"
            />
    </group>

<!--    <group-->
<!--        android:checkableBehavior="single"-->
<!--        android:id="@+id/account_group">-->
<!--        <item-->
<!--            android:id="@+id/drawer_join"-->
<!--            android:title="@string/join"-->
<!--            />-->
<!--        <item-->
<!--            android:id="@+id/drawer_account"-->
<!--            android:title="@string/profile"-->
<!--            />-->
<!--        <item-->
<!--            android:id="@+id/drawer_log_out"-->
<!--            android:title="@string/logout"-->
<!--            />-->
<!--    </group>-->

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_setting"
            android:title="@string/setting"
            />
        <item
            android:id="@+id/drawer_rate_us"
            android:title="@string/rate_us"
            />
        <item
            android:id="@+id/drawer_about"
            android:title="@string/about"
            />
    </group>

</menu>